--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tell me More</title>
+    <title>Index</title>
   </head>
   <body>
-    <h1>Hitting Home!</h1>
+    <h1>Hitting the index page</h1>
+    <form action="api/logout" method="GET">
+      <button type="submit">Log Out</button>
+    </form>
   </body>
 </html>
